# process-safety-evals

./: .env.example  .gitattributes  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
logs/: 2026-06-19T13-58-36-00-00_process-safety-mcq_DeqSyKorQbtS9iyBSKjDnd.eval  2026-06-19T14-26-54-00-00_process-safety-reasoning_6guq3rVzym4rU3GwpkF7or.eval  2026-06-19T15-03-49-00-00_process-safety-mcq_UgYJZE8pvSg95HXUptfcZK.eval  2026-06-20T15-57-32-00-00_process-safety-mcq_C7drrLJBwkCX9WgruuPFgF.eval  2026-06-20T16-06-46-00-00_process-safety-reasoning_fBdBNn3T3FtQcbfUAki3ng.eval  2026-06-20T16-39-55-00-00_process-safety-reasoning_4yzXsnYMu224F2ZxcHPq2Z.eval  2026-06-20T17-28-34-00-00_process-safety-agentic_4qJBjhzRbeEFHHzYE8ZCj8.eval  2026-06-20T17-42-15-00-00_process-safety-agentic_jewKtDKpqPmi4WCLmT26sC.eval  2026-06-20T18-24-43-00-00_process-safety-agentic_HJ63xXUBLNNzQqEueBzGKB.eval
sandbox/: compose.yaml
scripts/: compare_runs.py
serving/: README.md  compose.yaml
src/process_safety/: __init__.py  agentic.py  dataset.py  task.py
src/process_safety/data/: SOURCES.md  agentic.jsonl  process_safety.jsonl
src/process_safety/data/agentic/agt-001/: canteen_menu.txt  coshh_overview.txt  eh40_extract.txt  exposure_log.csv  glydanol_data.csv
tests/: test_end_to_end.py
